# From-Data-Extraction-to-Data-Driven-Dynamic-Modeling-for-Collaborative-Robots

./: Dockerfile  README.md  docker-compose.yml  iiwa_controllers.yaml  message_guide.txt  requirements.txt  ros_entrypoint.sh  ros_graphics.sh
ML_model/: train.py  wait.sh
ML_model/BRNN_inv_model/: __init__.py
ML_model/Data/Fine-tuned/: p0_commanded  p0_followed  p0_torques  p0_velocity  p1_commanded  p1_followed  p1_torques  p1_velocity  p2_commanded  p2_followed  p2_torques  p2_velocity  r0_commanded  r0_followed  r0_torques  r0_velocity  r1_commanded  r1_followed  r1_torques  r1_velocity  r2_commanded  r2_followed  r2_torques  r2_velocity  s0_commanded  s0_followed  s0_torques  s0_velocity  s1_commanded  s1_followed  s1_torques  s1_velocity  s2_commanded  s2_followed  s2_torques  s2_velocity
ML_model/Data/General/: p0_commanded  p0_followed  p0_torques  p0_velocity  p1_commanded  p1_followed  p1_torques  p1_velocity  p2_commanded  p2_followed  p2_torques  p2_velocity  r0_commanded  r0_followed  r0_torques  r0_velocity  r1_commanded  r1_followed  r1_torques  r1_velocity  r2_commanded  r2_followed  r2_torques  r2_velocity  s0_commanded  s0_followed  s0_torques  s0_velocity  s1_commanded  s1_followed  s1_torques  s1_velocity  s2_commanded  s2_followed  s2_torques  s2_velocity
ML_model/data_generator/: kuka_data.py
ML_model/utils/: __init__.py
custom_msg/: CMakeLists.txt
data/PD/spea_s1_1000_80_1/: params.json
optimization/: auxiliary_functions.py  bayesian.py  container.py  evaluator.py  extract_data.py  genetic.py  optimize.py  params_node.py  random_search.py  simulate_BRNN.py  termination_criterion.py
optimization/experiments/spiral/: spiral.json
other/kuka_iiwa/: iiwa_14.xacro
paths/data/p0/: cartesian_1000  initial_positions.yaml  joints_1000  params.json  velocity_1000
paths/data/p1/: cartesian_1000  cartesian_1500  cartesian_1750  initial_positions.yaml  joints_1000  joints_1500  joints_1750  params.json  velocity_1000  velocity_1500  velocity_1750
paths/data/p2/: cartesian_1000  cartesian_1500  cartesian_1750  initial_positions.yaml  joints_1000  joints_1500  joints_1750  params.json  velocity_1000  velocity_1500  velocity_1750
paths/data/r0/: cartesian_1000  initial_positions.yaml  joints_1000  params.json  velocity_1000
paths/data/r1/: cartesian_1000  initial_positions.yaml  joints_1000  params.json  velocity_1000
paths/data/r2/: cartesian_1000  initial_positions.yaml  joints_1000  params.json  velocity_1000
paths/data/s0/: cartesian_1000  cartesian_1200  cartesian_1400  cartesian_1600  cartesian_1800  cartesian_2000  cartesian_400  cartesian_600  cartesian_800  joints_1000  joints_1200  joints_1400  joints_1600  joints_1800  joints_2000  joints_400  joints_600  joints_800  params.json  velocity_1000  velocity_1200  velocity_1400  velocity_1600  velocity_1800  velocity_2000  velocity_400  velocity_600  velocity_800
paths/data/s1/: cartesian_1000  initial_positions.yaml  joints_1000  params.json  velocity_1000
paths/data/s2/: cartesian_1000  cartesian_1200  cartesian_1400  cartesian_1600  cartesian_1800  cartesian_2000  cartesian_400  cartesian_600  cartesian_800  joints_1000  joints_1200  joints_1400  joints_1600  joints_1800  joints_2000  joints_400  joints_600  joints_800  params.json  test.py  velocity_1000  velocity_1200  velocity_1400  velocity_1600  velocity_1800  velocity_2000  velocity_400  velocity_600  velocity_800
robots_models/: setup.py
robots_models/robots_models/: LBR14820.py
robots_models/robots_models.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/NN_controller/: package.xml  setup.cfg  setup.py
src/NN_controller/NN_controller/: controller.py
src/bringup/: package.xml  setup.py
src/bringup/launch/: controller.launch.py  experiments.launch.py  external_controller.launch.py  nn.launch.py  optimizer.launch.py  (+3 more)
src/custom_msg/: CMakeLists.txt  package.xml
src/external_controller/: CMakeLists.txt  external_plugin.xml  package.xml
src/external_controller/include/external_controller/: external_controller.hpp  visibility_control.h
src/external_controller/src/: external_controller.cpp
src/pd_controller/: CMakeLists.txt  package.xml  pd_plugin.xml
src/pd_controller/include/pd_controller/: pd_controller.hpp  visibility_control.h
src/pd_controller/src/: pd_controller.cpp
(+3 files in other folders)
